src/jsc/bindings/libuv/uv.h

/* Internal type, do not use. */
struct uv__queue {
    struct uv__queue* next;
    struct uv__queue* prev;
};
typedef enum {
#define XX(code, _) UV_##code = UV__##code,
    UV_ERRNO_MAP(XX)
#undef XX
        UV_ERRNO_MAX
    = UV__EOF - 1
} uv_errno_t;
typedef enum {
    UV_UNKNOWN_HANDLE = 0,
#define XX(uc, lc) UV_##uc,
    UV_HANDLE_TYPE_MAP(XX)
#undef XX
        UV_FILE,
    UV_HANDLE_TYPE_MAX
} uv_handle_type;
typedef enum {
    UV_UNKNOWN_REQ = 0,
#define XX(uc, lc) UV_##uc,
    UV_REQ_TYPE_MAP(XX)
#undef XX
        UV_REQ_TYPE_PRIVATE
            UV_REQ_TYPE_MAX
} uv_req_type;
/* Handle types. */
typedef struct uv_loop_s uv_loop_t;
typedef struct uv_handle_s uv_handle_t;
/* Request types. */
typedef struct uv_req_s uv_req_t;
typedef struct uv_fs_s uv_fs_t;
typedef enum {
    UV_RUN_DEFAULT = 0,
    UV_RUN_ONCE,
    UV_RUN_NOWAIT
} uv_run_mode;
UV_EXTERN uv_loop_t* uv_default_loop(void);
UV_EXTERN int uv_loop_init(uv_loop_t* loop);
UV_EXTERN int uv_loop_close(uv_loop_t* loop);
UV_EXTERN size_t uv_loop_size(void);
UV_EXTERN int uv_run(uv_loop_t*, uv_run_mode mode);
typedef void (*uv_close_cb)(uv_handle_t* handle);
typedef void (*uv_walk_cb)(uv_handle_t* handle, void* arg);
typedef void (*uv_fs_cb)(uv_fs_t* req);
/* XXX(bnoordhuis) not 2038-proof, https://github.com/libuv/libuv/issues/3864 */
typedef struct {
    long tv_sec;
    long tv_nsec;
} uv_timespec_t;
typedef struct {
    uint64_t st_dev;
    uint64_t st_mode;
    uint64_t st_nlink;
    uint64_t st_uid;
    uint64_t st_gid;
    uint64_t st_rdev;
    uint64_t st_ino;
    uint64_t st_size;
    uint64_t st_blksize;
    uint64_t st_blocks;
    uint64_t st_flags;
    uint64_t st_gen;
    uv_timespec_t st_atim;
    uv_timespec_t st_mtim;
    uv_timespec_t st_ctim;
    uv_timespec_t st_birthtim;
} uv_stat_t;
/* Abstract base class of all requests. */
struct uv_req_s {
    UV_REQ_FIELDS
};
/* The abstract base class of all handles. */
struct uv_handle_s {
    UV_HANDLE_FIELDS
};
UV_EXTERN void uv_walk(uv_loop_t* loop, uv_walk_cb walk_cb, void* arg);
UV_EXTERN void uv_close(uv_handle_t* handle, uv_close_cb close_cb);
UV_EXTERN int uv_is_closing(const uv_handle_t* handle);
typedef enum {
    UV_FS_UNKNOWN = -1,
    UV_FS_CUSTOM,
    UV_FS_OPEN,
    UV_FS_CLOSE,
    UV_FS_READ,
    UV_FS_WRITE,
    UV_FS_SENDFILE,
    UV_FS_STAT,
    UV_FS_LSTAT,
    UV_FS_FSTAT,
    UV_FS_FTRUNCATE,
    UV_FS_UTIME,
    UV_FS_FUTIME,
    UV_FS_ACCESS,
    UV_FS_CHMOD,
    UV_FS_FCHMOD,
    UV_FS_FSYNC,
    UV_FS_FDATASYNC,
    UV_FS_UNLINK,
    UV_FS_RMDIR,
    UV_FS_MKDIR,
    UV_FS_MKDTEMP,
    UV_FS_RENAME,
    UV_FS_SCANDIR,
    UV_FS_LINK,
    UV_FS_SYMLINK,
    UV_FS_READLINK,
    UV_FS_CHOWN,
    UV_FS_FCHOWN,
    UV_FS_REALPATH,
    UV_FS_COPYFILE,
    UV_FS_LCHOWN,
    UV_FS_OPENDIR,
    UV_FS_READDIR,
    UV_FS_CLOSEDIR,
    UV_FS_STATFS,
    UV_FS_MKSTEMP,
    UV_FS_LUTIME
} uv_fs_type;
/* uv_fs_t is a subclass of uv_req_t. */
struct uv_fs_s {
    UV_REQ_FIELDS
    uv_fs_type fs_type;
    uv_loop_t* loop;
    uv_fs_cb cb;
    ssize_t result;
    void* ptr;
    const char* path;
    uv_stat_t statbuf; /* Stores the result of uv_fs_stat() and uv_fs_fstat(). */
    UV_FS_PRIVATE_FIELDS
};
UV_EXTERN void uv_fs_req_cleanup(uv_fs_t* req);
UV_EXTERN void uv_once(uv_once_t* guard, void (*callback)(void));
struct uv_loop_s {
    /* User data - use this for whatever. */
    void* data;
    /* Loop reference counting. */
    unsigned int active_handles;
    struct uv__queue handle_queue;
    union {
        void* unused;
        unsigned int count;
    } active_reqs;
    /* Internal storage for future extensions. */
    void* internal_fields;
    /* Internal flag to signal loop stop. */
    unsigned int stop_flag;
    UV_LOOP_PRIVATE_FIELDS
};