src/libuv_sys/libuv.rs

//! Hand-maintained FFI bindings for the subset of libuv that Bun calls
//! directly from Rust on **Windows**. The full surface (`src/libuv_sys/libuv.zig`,
//! ~3200 lines) is auto-generated; this file ports only the types and externs
//! that have Rust callers today (`node_fs.rs`, `sys_uv.rs`, `io::source`, …).
//!
//! Layout MUST match libuv's C headers exactly — these structs are passed by
//! pointer to `uv_fs_*` and read back by field. When in doubt, compare against
//! `vendor/libuv/include/uv.h` and `vendor/libuv/include/uv/win.h`.
#![cfg(windows)]
#![allow(non_camel_case_types, non_snake_case)]

use core::ffi::{c_char, c_int, c_long, c_uint, c_void};

// ──────────────────────────────────────────────────────────────────────────
// Basic Win32 typedefs (kept local so this crate stays leaf — no `bun_sys`
// dependency; see PORTING.md §Crate map: `bun_libuv_sys` is raw FFI only).
// ──────────────────────────────────────────────────────────────────────────
type ULONG = u32;
type DWORD = u32;
type ULONG_PTR = usize;
type HANDLE = *mut c_void;
type WCHAR = u16;

pub type uv_file = c_int;
pub type uv_req_type = c_uint;
pub type uv_fs_type = c_int;
pub type uv_loop_t = Loop;
pub type uv_fs_t = fs_t;
pub type uv_fs_cb = Option<unsafe extern "C" fn(*mut fs_t)>;
// libuv on Windows defines these as `unsigned char` (chown is a no-op there).
pub type uv_uid_t = u8;
pub type uv_gid_t = u8;

/// `OVERLAPPED` — `std.os.windows.OVERLAPPED` (5 pointer-sized fields).
#[repr(C)]
#[derive(Clone, Copy)]
struct OVERLAPPED {
    Internal: ULONG_PTR,
    InternalHigh: ULONG_PTR,
    Offset: DWORD,
    OffsetHigh: DWORD,
    hEvent: HANDLE,
}

#[repr(C)]
#[derive(Clone, Copy)]
struct uv__queue {
    next: *mut uv__queue,
    prev: *mut uv__queue,
}

#[repr(C)]
#[derive(Clone, Copy)]
struct uv__work {
    work: Option<unsafe extern "C" fn(*mut uv__work)>,
    done: Option<unsafe extern "C" fn(*mut uv__work, c_int)>,
    loop_: *mut Loop,
    wq: uv__queue,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct uv_timespec_t {
    pub sec: c_long,
    pub nsec: c_long,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct uv_stat_t {
    pub dev: u64,
    pub mode: u64,
    pub nlink: u64,
    pub uid: u64,
    pub gid: u64,
    pub rdev: u64,
    pub ino: u64,
    pub size: u64,
    pub blksize: u64,
    pub blocks: u64,
    pub flags: u64,
    pub r#gen: u64,
    pub atim: uv_timespec_t,
    pub mtim: uv_timespec_t,
    pub ctim: uv_timespec_t,
    pub birthtim: uv_timespec_t,
}

// `uv_req_s.u` — overlapped/connect union shared by every `uv_req_t`.
#[repr(C)]
#[derive(Clone, Copy)]
struct req_u_io {
    overlapped: OVERLAPPED,
    queued_bytes: usize,
}
#[repr(C)]
#[derive(Clone, Copy)]
struct req_u_connect {
    result: ULONG_PTR,
    pipeHandle: HANDLE,
    duplex_flags: DWORD,
    name: *mut WCHAR,
}
#[repr(C)]
#[derive(Clone, Copy)]
union req_u {
    io: req_u_io,
    connect: req_u_connect,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct uv_buf_t {
    pub len: ULONG,
    pub base: *mut u8,
}
impl uv_buf_t {
    #[inline]
    pub fn init(input: &[u8]) -> uv_buf_t {
        debug_assert!(input.len() <= ULONG::MAX as usize);
        uv_buf_t { len: input.len() as ULONG, base: input.as_ptr() as *mut u8 }
    }
    #[inline]
    pub fn slice(&self) -> &[u8] {
        // SAFETY: caller-supplied (base, len); valid for the buffer's lifetime.
        unsafe { core::slice::from_raw_parts(self.base, self.len as usize) }
    }
}

// `uv_fs_t.file` / `uv_fs_t.fs` — Windows-specific tail.
#[repr(C)]
#[derive(Clone, Copy)]
union fs_file {
    pathw: *mut WCHAR,
    fd: c_int,
}
#[repr(C)]
#[derive(Clone, Copy)]
struct fs_info {
    mode: c_int,
    new_pathw: *mut WCHAR,
    file_flags: c_int,
    fd_out: c_int,
    nbufs: c_uint,
    bufs: *mut uv_buf_t,
    offset: i64,
    bufsml: [uv_buf_t; 4],
}
#[repr(C)]
#[derive(Clone, Copy)]
struct fs_time {
    atime: f64,
    mtime: f64,
}
#[repr(C)]
#[derive(Clone, Copy)]
union fs_fs {
    info: fs_info,
    time: fs_time,
}

/// `uv_fs_t` (Windows layout). Only `data`, `result`, `ptr`, `path` are read
/// from Rust; the rest exist so `mem::zeroed::<fs_t>()` allocates the correct
/// number of bytes for libuv to write into.
#[repr(C)]
pub struct fs_t {
    pub data: *mut c_void,
    pub type_: uv_req_type,
    pub reserved: [*mut c_void; 6],
    u: req_u,
    next_req: *mut c_void, // *uv_req_s
    pub fs_type: uv_fs_type,
    pub loop_: *mut Loop,
    pub cb: uv_fs_cb,
    pub result: ReturnCodeI64,
    pub ptr: *mut c_void,
    pub path: *const c_char,
    pub statbuf: uv_stat_t,
    work_req: uv__work,
    pub flags: c_int,
    pub sys_errno_: DWORD,
    file: fs_file,
    fs: fs_fs,
}

impl fs_t {
    const UV_FS_CLEANEDUP: c_int = 0x0010;

    /// Debug sentinel: `loop_` is poisoned so `deinit()` can assert that libuv
    /// actually wrote the request before we try to clean it up.
    pub const UNINITIALIZED: fs_t = {
        // SAFETY: all-zero is a valid `fs_t` (POD `#[repr(C)]`); we then
        // poison `loop_` for the debug assertion in `assert_initialized`.
        let mut v: fs_t = unsafe { core::mem::zeroed() };
        v.loop_ = 0xAAAA_AAAA_AAAA_0000usize as *mut Loop;
        v
    };

    #[inline]
    pub fn deinit(&mut self) {
        self.assert_initialized();
        // SAFETY: `self` was passed to a `uv_fs_*` call (assert above).
        unsafe { uv_fs_req_cleanup(self) };
        self.assert_cleaned_up();
    }

    #[inline]
    fn assert_initialized(&self) {
        #[cfg(debug_assertions)]
        if self.loop_ as usize == 0xAAAA_AAAA_AAAA_0000usize {
            panic!("uv_fs_t was not initialized");
        }
    }
    #[inline]
    pub fn assert_cleaned_up(&self) {
        #[cfg(debug_assertions)]
        {
            if self.loop_ as usize == 0xAAAA_AAAA_AAAA_0000usize { return; }
            if (self.flags & Self::UV_FS_CLEANEDUP) != 0 { return; }
            panic!("uv_fs_t was not cleaned up. it is expected to call .deinit() on the fs_t here.");
        }
    }

    #[inline]
    pub unsafe fn ptr_as<T>(&self) -> *const T {
        self.assert_initialized();
        self.ptr.cast::<T>()
    }
}

/// `uv_loop_t` — opaque here (Rust never reads its fields). `Loop::get()`
/// returns the per-thread default loop, lazily initialised.
#[repr(C)]
pub struct Loop {
    _opaque: [u8; 0],
    _m: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}
// Per-thread libuv loop (libuv.zig:729-740). Zig stored an inline
// `threadlocal Loop` value; Rust treats `Loop` as opaque, so the per-thread
// instance is heap-allocated at `uv_loop_size()` bytes and `uv_loop_init`'d on
// first `get()`. `shutdown()` closes it and clears the slot so a subsequent
// `get()` (e.g. a fresh worker on a recycled thread) re-initialises.
use core::cell::Cell;
thread_local! {
    static THREADLOCAL_LOOP: Cell<*mut Loop> = const { Cell::new(core::ptr::null_mut()) };
}

impl Loop {
    /// `bun.windows.libuv.Loop.get()` (libuv.zig:733). Returns this thread's
    /// libuv loop, lazily `uv_loop_init`ing it on first call. Each thread owns
    /// its own loop — the Windows event loop and the per-worker shutdown
    /// (`WebWorker::shutdown` → [`Loop::shutdown`]) require it; sharing the
    /// process-global `uv_default_loop()` across worker threads is unsound.
    pub fn get() -> *mut Loop {
        THREADLOCAL_LOOP.with(|slot| {
            let existing = slot.get();
            if !existing.is_null() {
                return existing;
            }
            // SAFETY: `uv_loop_size()` returns `sizeof(uv_loop_t)`; mimalloc
            // alignment (16) covers the struct's alignment requirement.
            let size = unsafe { uv_loop_size() };
            let layout = core::alloc::Layout::from_size_align(size, 16).unwrap();
            // SAFETY: layout is non-zero (uv_loop_t is >100 bytes on Windows).
            let ptr = unsafe { std::alloc::alloc(layout) } as *mut Loop;
            assert!(!ptr.is_null(), "OOM allocating uv_loop_t");
            // SAFETY: `ptr` is a fresh `uv_loop_size()`-byte allocation.
            if let Some(err) = unsafe { uv_loop_init(ptr) }.errno() {
                panic!("Failed to initialize libuv loop: errno {err}");
            }
            slot.set(ptr);
            ptr
        })
    }

    /// `bun.windows.libuv.Loop.shutdown()` (libuv.zig:714). Closes and frees
    /// this thread's libuv loop. Called from `WebWorker::shutdown` between
    /// `gc_controller.deinit()` and `vm.deinit()` so the per-thread uv loop
    /// (and its handles) are torn down with the worker thread.
    pub fn shutdown() {
        THREADLOCAL_LOOP.with(|slot| {
            let loop_ = slot.get();
            if loop_.is_null() {
                return;
            }
            // SAFETY: `loop_` is the live per-thread loop allocated in `get()`.
            // EBUSY ⇒ handles still open: walk + close them, run once to flush
            // close callbacks, then close again (must succeed per libuv API).
            if unsafe { uv_loop_close(loop_) }.errno().is_some() {
                // SAFETY: `loop_` valid; `close_walk_cb` is a valid callback.
                unsafe { uv_walk(loop_, Some(close_walk_cb), core::ptr::null_mut()) };
                // SAFETY: `loop_` valid; `UV_RUN_DEFAULT` runs to quiescence.
                let _ = unsafe { uv_run(loop_, RunMode::Default) };
                // SAFETY: handles closed above; close must succeed now. NOTE
                // the call is unconditional (Zig `bun.debugAssert` evaluates
                // its argument in release too) — only the check is debug-only.
                let rc = unsafe { uv_loop_close(loop_) };
                debug_assert_eq!(rc, ReturnCode::ZERO);
            }
            // SAFETY: matches the `alloc` in `get()`.
            let size = unsafe { uv_loop_size() };
            let layout = core::alloc::Layout::from_size_align(size, 16).unwrap();
            unsafe { std::alloc::dealloc(loop_.cast(), layout) };
            slot.set(core::ptr::null_mut());
        });
    }
}

/// `Loop.closeWalkCb` (libuv.zig:705) — `uv_walk` visitor that closes every
/// not-yet-closing handle so `uv_loop_close` can succeed on retry.
unsafe extern "C" fn close_walk_cb(handle: *mut uv_handle_t, _data: *mut c_void) {
    // SAFETY: libuv passes a live handle; `uv_is_closing`/`uv_close` are the
    // documented teardown pair.
    if unsafe { uv_is_closing(handle) } == 0 {
        unsafe { uv_close(handle, None) };
    }
}

/// `RunMode` (libuv.zig:681) — `uv_run` mode argument.
#[repr(C)]
#[derive(Copy, Clone, PartialEq, Eq)]
pub enum RunMode {
    Default = 0,
    Once = 1,
    NoWait = 2,
}
pub type uv_run_mode = RunMode;

unsafe extern "C" {
    pub fn uv_loop_init(loop_: *mut uv_loop_t) -> ReturnCode;
    pub fn uv_loop_close(loop_: *mut uv_loop_t) -> ReturnCode;
    pub fn uv_loop_size() -> usize;
    pub fn uv_run(loop_: *mut uv_loop_t, mode: uv_run_mode) -> c_int;
    pub fn uv_walk(
        loop_: *mut uv_loop_t,
        walk_cb: Option<unsafe extern "C" fn(*mut uv_handle_t, *mut c_void)>,
        arg: *mut c_void,
    );
}

/// `enum(c_int)` newtype — libuv return codes are `0` on success, `-errno`
/// on failure.
#[repr(transparent)]
#[derive(Clone, Copy, PartialEq, Eq)]
pub struct ReturnCode(pub c_int);
impl ReturnCode {
    pub const ZERO: ReturnCode = ReturnCode(0);
    #[inline] pub fn int(self) -> c_int { self.0 }
    /// `Some(e)` when negative — caller maps via
    /// `bun_sys::libuv_error_map::translate_uv_error_to_e`. We do **not** call
    /// that here to keep `bun_libuv_sys` free of `bun_sys` (layering).
    #[inline] pub fn errno(self) -> Option<u16> {
        if self.0 < 0 { Some((-self.0) as u16) } else { None }
    }
}
